i think i fixed the class-section route, controller, and validation
