# routes/class-sections.js
@@ -28,8 +28,28 @@ router.get(
 // // add class section
 router.post(
   "/",
-  /* #swagger.tags = ['Class Sections'] */ validator.sectionRules(),
+  /* #swagger.tags = ['Class Sections'] */
+  validator.sectionRules(),
   validator.checkData,
+  /* #swagger.tags = ['Class Sections']
+    #swagger.description = 'add class section by sectionId'
+    #swagger.parameters['classSection'] = {
+        in: 'body',
+        description: 'Class section obejct',
+        required: true,
+        schema: {
+            sectionId: 'CSE212-001',
+            classId: 'CSE212',
+            semesterId: 'fall2025',
+            teacherId: 'T12345',
+            classroomId: 'CSB201',
+            meetingTimes: [
+            { "day": "Mon", "start": "10:00", "end": "11:15" },
+            { "day": "Wed", "start": "10:00", "end": "11:15" }
+            ],
+            capacity: 40
+        }
+    } */
   utils.handleErrors(classSectionController.insertClassSection)
 );
 
