# swagger.json
@@ -48,7 +48,64 @@
         "tags": [
           "Class Sections"
         ],
-        "description": "",
+        "description": "add class section by sectionId",
+        "parameters": [
+          {
+            "name": "classSection",
+            "in": "body",
+            "description": "Class section obejct",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "sectionId": {
+                  "type": "string",
+                  "example": "CSE212-001"
+                },
+                "classId": {
+                  "type": "string",
+                  "example": "CSE212"
+                },
+                "semesterId": {
+                  "type": "string",
+                  "example": "fall2025"
+                },
+                "teacherId": {
+                  "type": "string",
+                  "example": "T12345"
+                },
+                "classroomId": {
+                  "type": "string",
+                  "example": "CSB201"
+                },
+                "meetingTimes": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "day": {
+                        "type": "string",
+                        "example": "Wed"
+                      },
+                      "start": {
+                        "type": "string",
+                        "example": "10:00"
+                      },
+                      "end": {
+                        "type": "string",
+                        "example": "11:15"
+                      }
+                    }
+                  }
+                },
+                "capacity": {
+                  "type": "number",
+                  "example": 40
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "default": {
             "description": ""
